--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})
 
 set(EXESUF)
-set(TCC_CFLAGS -s -r -w -I. -I${CMAKE_SOURCE_DIR} -I${CMAKE_SOURCE_DIR}/tests -I${CMAKE_SOURCE_DIR}/src -I${CMAKE_SOURCE_DIR}/include -B${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
+set(TCC_CFLAGS -s -r -w -I. -I${CMAKE_SOURCE_DIR} -I${CMAKE_SOURCE_DIR}/tests -I${CMAKE_SOURCE_DIR}/include -B${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
 set(TCC_MATH_LDFLAGS)
 set(LIBTCC_LDFLAGS)
 if(WIN32)
