--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,19 +7,20 @@ set(LIBTCC_LDFLAGS)
 if(WIN32)
   set(TCC_CFLAGS ${TCC_CFLAGS} -I${CMAKE_SOURCE_DIR}/win32/include -I${CMAKE_SOURCE_DIR}/win32/include/winapi )
   set(EXESUF .exe )
-  set(LIBTCC_LDFLAGS -Wl,-rpath=${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug)
-  add_subdirectory(dltests)
+  set(LIBTCC_LDFLAGS -Wl,-rpath=${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+  add_subdirectory(dll)
 else()
   set(TCC_MATH_LDFLAGS -lm)
   set(LIBTCC_LDFLAGS -ldl -Wl,-rpath=${CMAKE_BINARY_DIR})
 endif()
 
-if( ${CMAKE_TARGET_ARCHITECTURES} STREQUAL i386 )
+add_subdirectory(thread)
+if( ${TARGET_ARCH} STREQUAL i386 )
     set(TCC_CFLAGS ${TCC_CFLAGS} -fno-PIC -fno-PIE -Wl,-z,notext )
-elseif( ${CMAKE_TARGET_ARCHITECTURES} STREQUAL arm_eabi
-    OR ${CMAKE_TARGET_ARCHITECTURES} STREQUAL armv7
-    OR ${CMAKE_TARGET_ARCHITECTURES} STREQUAL arm64
-    OR ${CMAKE_TARGET_ARCHITECTURES} STREQUAL arm )
+elseif( ${TARGET_ARCH} STREQUAL arm_eabi
+    OR ${TARGET_ARCH} STREQUAL armv7
+    OR ${TARGET_ARCH} STREQUAL arm64
+    OR ${TARGET_ARCH} STREQUAL arm )
         set(TCC_CFLAGS ${TCC_CFLAGS} -marm )
 endif()
 
@@ -167,11 +168,11 @@ if(WIN32)
   list(REMOVE_ITEM TESTS2 116_bound_setjmp2)
   list(REMOVE_ITEM TESTS2 117_builtins)
   list(REMOVE_ITEM TESTS2 124_atomic_counter)
-elseif( NOT APPLE AND ${CMAKE_TARGET_ARCHITECTURES} STREQUAL arm64
-  OR ${CMAKE_TARGET_ARCHITECTURES} STREQUAL riscv64
-  OR ${CMAKE_TARGET_ARCHITECTURES} STREQUAL armv7
-  OR ${CMAKE_TARGET_ARCHITECTURES} STREQUAL arm_eabi
-  OR ${CMAKE_TARGET_ARCHITECTURES} STREQUAL arm )
+elseif( NOT APPLE AND ${TARGET_ARCH} STREQUAL arm64
+  OR ${TARGET_ARCH} STREQUAL riscv64
+  OR ${TARGET_ARCH} STREQUAL armv7
+  OR ${TARGET_ARCH} STREQUAL arm_eabi
+  OR ${TARGET_ARCH} STREQUAL arm )
     list(REMOVE_ITEM TESTS2 85_asm-outside-function )
     list(REMOVE_ITEM TESTS2 98_al_ax_extend )
     list(REMOVE_ITEM TESTS2 127_asm_goto )
