remerge remote-tracking branch 'upstream/mob'
- Previous merge would cause cmake to not link to create tests executable, throws `tcc : error : undefined symbol '__rt_exit'`
- Modified the section in `runmain.c` to skip if `CONFIG_TCC_BACKTRACE_ONLY` is defined, which is the default

--- a/tests/dll/CMakeLists.txt
+++ b/tests/dll/CMakeLists.txt
@@ -17,7 +17,7 @@ if(WIN32)
 
     add_custom_target(
         t_dlfcn ALL
-        COMMAND tcc ${DL_DIR}/test.c ${CFLAGS} -o ${CMAKE_BINARY_DIR}/t_dlfcn.exe
+        COMMAND tcc ${DL_DIR}/test.c ${CFLAGS} -B ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY} -o ${CMAKE_BINARY_DIR}/t_dlfcn.exe
         DEPENDS ${DL_DLLFILES}
         BYPRODUCTS ${CMAKE_BINARY_DIR}/t_dlfcn.exe
         SOURCES ${DL_DIR}/test.c )
