--- a/tests/thread/CMakeLists.txt
+++ b/tests/thread/CMakeLists.txt
@@ -1,7 +1,7 @@
 include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR} ${CMAKE_SOURCE_DIR}/include)
 
 set( TH_DIR ${CMAKE_CURRENT_SOURCE_DIR} )
-set(TH_CFLAGS -I${CMAKE_SOURCE_DIR}/include )
+set(TH_CFLAGS -B ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY} -I${CMAKE_SOURCE_DIR}/include)
 if(WIN32)
   set(TH_CFLAGS ${TH_CFLAGS} -I${CMAKE_SOURCE_DIR}/win32/include -I${CMAKE_SOURCE_DIR}/win32/include/winapi )
   set(EXESUF .exe )
@@ -13,28 +13,28 @@ endif()
 
 add_custom_target(
     test-cthread ALL
-    COMMAND tcc ${TH_DIR}/test-cthread.c ${TH_CFLAGS} -o ${CMAKE_BINARY_DIR}/${TARGET_ARCH}-test-cthread${EXESUF}
-    BYPRODUCTS ${CMAKE_BINARY_DIR}/${TARGET_ARCH}-test-cthread${EXESUF}
+    COMMAND tcc ${TH_DIR}/test-cthread.c ${TH_CFLAGS} -o ${CMAKE_BINARY_DIR}/test-cthread${EXESUF}
+    BYPRODUCTS ${CMAKE_BINARY_DIR}/test-cthread${EXESUF}
     SOURCES ${TH_DIR}/test-cthread.c )
 add_test(NAME pool-cthread COMMAND pool-cthread WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 
 add_custom_target(
     pool-test_shutdown ALL
-    COMMAND tcc ${TH_DIR}/pool-test_shutdown.c ${TH_CFLAGS} -o ${CMAKE_BINARY_DIR}/${TARGET_ARCH}-pool-test_shutdown${EXESUF}
-    BYPRODUCTS ${CMAKE_BINARY_DIR}/${TARGET_ARCH}-pool-test_shutdown${EXESUF}
+    COMMAND tcc ${TH_DIR}/pool-test_shutdown.c ${TH_CFLAGS} -o ${CMAKE_BINARY_DIR}/pool-test_shutdown${EXESUF}
+    BYPRODUCTS ${CMAKE_BINARY_DIR}/pool-test_shutdown${EXESUF}
     SOURCES ${TH_DIR}/pool-test_shutdown.c )
 add_test(NAME pool-test_shutdown COMMAND pool-test_shutdown WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 
 add_custom_target(
     pool-test_heavy ALL
-    COMMAND tcc ${TH_DIR}/pool-test_heavy.c ${TH_CFLAGS} -o ${CMAKE_BINARY_DIR}/${TARGET_ARCH}-pool-test_heavy${EXESUF}
-    BYPRODUCTS ${CMAKE_BINARY_DIR}/${TARGET_ARCH}-pool-test_heavy${EXESUF}
+    COMMAND tcc ${TH_DIR}/pool-test_heavy.c ${TH_CFLAGS} -o ${CMAKE_BINARY_DIR}/pool-test_heavy${EXESUF}
+    BYPRODUCTS ${CMAKE_BINARY_DIR}/pool-test_heavy${EXESUF}
     SOURCES ${TH_DIR}/pool-test_heavy.c )
 add_test(NAME pool-test_heavy COMMAND pool-test_heavy WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 
 add_custom_target(
     pool-test_wait ALL
-    COMMAND tcc ${TH_DIR}/pool-test_wait.c ${TH_CFLAGS} -o ${CMAKE_BINARY_DIR}/${TARGET_ARCH}-pool-test_wait${EXESUF}
-    BYPRODUCTS ${CMAKE_BINARY_DIR}/${TARGET_ARCH}-pool-test_wait${EXESUF}
+    COMMAND tcc ${TH_DIR}/pool-test_wait.c ${TH_CFLAGS} -o ${CMAKE_BINARY_DIR}/pool-test_wait${EXESUF}
+    BYPRODUCTS ${CMAKE_BINARY_DIR}/pool-test_wait${EXESUF}
     SOURCES ${TH_DIR}/pool-test_wait.c )
 add_test(NAME pool-test_wait COMMAND pool-test_wait WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
