update .tcc.bat and CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -599,3 +599,6 @@ else()
 endif()
 
 install(FILES tinycc-docs.html DESTINATION ${CMAKE_INSTALL_DOCDIR})
+install(FILES .tcc.bat DESTINATION ${CMAKE_INSTALL_DATADIR})
+install(FILES .tccVar.bat DESTINATION ${CMAKE_INSTALL_DATADIR})
+install(FILES .tccVar32.bat DESTINATION ${CMAKE_INSTALL_DATADIR})
