update CMakeLists.txt, config.h.in, config.h and config.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,15 @@ SET(CPACK_COMPONENTS_ALL_IN_ONE_PACKAGE 1)
 set(CPACK_VERBATIM_VARIABLES YES)
 
 set(CMAKE_CONFIGURATION_TYPES=Debug;Release)
+
+if(WIN32)
+    if(CMAKE_SIZEOF_VOID_P MATCHES "8")
+        set(CMAKE_INSTALL_PREFIX "C:/Program Files/${PROJECT_NAME}")
+    else()
+        set(CMAKE_INSTALL_PREFIX "C:/Program Files (x86)/${PROJECT_NAME}")
+    endif()
+endif()
+
 message(STATUS "Installing to ${CMAKE_INSTALL_PREFIX}")
 
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_MODULE_PATH})
@@ -204,7 +213,7 @@ target_compile_definitions(libtcc
     PRIVATE ONE_SOURCE=0
     PUBLIC "${NATIVE_TARGET}="
     PUBLIC TCC_LIBTCC1=\"libtcc1-${TARGET_ARCH}.a\"
-    PRIVATE CONFIG_TCCDIR=\".\"
+    PRIVATE CONFIG_TCCDIR=\"${CMAKE_INSTALL_PREFIX}\"
     PUBLIC TCC_VERSION=\"${TCC_VERSION}\")
 
 if(WIN32)
