--- a/config.h.in
+++ b/config.h.in
@@ -1,5 +1,5 @@
 #ifndef CONFIG_TCCDIR
-#define CONFIG_TCCDIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
+#define CONFIG_TCCDIR "${CMAKE_INSTALL_PREFIX}"
 #endif
 
 #ifndef TCC_VERSION
